# elements-rs

./: Cargo.toml  README.md  deny.toml
.cargo/: mutants.toml
.github/workflows/: deny.yml  mutants.yml  rust.yml
builder/: Cargo.toml
builder/src/: main.rs
src/: element_mask.rs  oxidation_states.rs
