[package]
name = "elements_rs"
version = "0.2.8"
authors = ["Earth Metabolome Initiative"]
license = "MIT"
repository = "https://github.com/earth-metabolome-initiative/elements-rs"
edition = "2024"
rust-version = "1.88"
description = "A comprehensive library for chemical elements and their isotopes with rich metadata"
readme = "README.md"
keywords = ["chemistry", "periodic-table", "elements", "isotopes", "science"]
categories = ["science", "database"]
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
strum_macros = "0.28.0"
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"
serde = { version = "1.0", features = [
	"derive",
], optional = true, default-features = false }
arbitrary = { version = "1.0", features = ["derive"], optional = true, default-features = false }
mem_dbg = { version = "0.4.1", features = [
	"derive",
], optional = true, default-features = false }

[features]
default = ["serde"]
std = []
serde = ["dep:serde"]
arbitrary = ["dep:arbitrary"]
mem_size = ["dep:mem_dbg"]
mem_dbg = ["std", "mem_size", "mem_dbg/std"]

[lints]
workspace = true

[workspace.lints.rust]
missing_docs = "forbid"
unused_macro_rules = "forbid"
unconditional_recursion = "forbid"
unreachable_patterns = "forbid"
unused_import_braces = "forbid"
unused_must_use = "forbid"
deprecated = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "forbid"
bare_urls = "forbid"
invalid_codeblock_attributes = "forbid"
invalid_html_tags = "forbid"
missing_crate_level_docs = "forbid"
unescaped_backticks = "forbid"
redundant_explicit_links = "forbid"
invalid_rust_codeblocks = "forbid"

[workspace.lints.clippy]
unreadable_literal = "allow"
missing_panics_doc = "allow"
new_ret_no_self = "allow"
struct_excessive_bools = "allow"
should_panic_without_expect = "allow"
doc_markdown = "allow"
clone_on_copy = "forbid"
pedantic = { level = "deny", priority = -1 }

[workspace]
members = ["builder", "."]
