[package]
name = "elements-builder"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
publish = false

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
proc-macro2 = "1.0"
serde_json = { version = "1.0" }

[lints]
workspace = true
